--- a/style.css
+++ b/style.css
@@ -6,8 +6,15 @@ body {
     font-size: 16px;
 }
 
+h1 {
+    position: absolute;
+    left: 39%;
+}
+
 ul {
     width: 30%;
+    position: absolute;
+    top: 20%;
 }
 
 ul>li {
